--- a/src/Home.scss
+++ b/src/Home.scss
@@ -7,7 +7,7 @@ $checkout-overlay-shade: #000000a0;
 $checkout-content-rounded-edges: 5px;
 
 .home {
-    height: 95vh;
+    min-height: 95vh;
     background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
         url("./assets/images/loading.png");
     background-color: $summary-shade;
